Changes to TemplateClientLiveTest following review. Test now passes without a java SSL certificate exception.